--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.23"
 csv = "1.1.6"
+futures = "0.3.25"
 leaky-bucket = "0.12.2"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.91"
+tokio = { version = "1.24.1", features = ["full"] }
